# codeGuardian

./: .ai-guardian.yml  .gitignore  LICENSE  README.md  demo.py  guidance.md  install.sh  pyproject.toml  usage.md
examples/: .ai-guardian.yml  good_code.py  vulnerable_code.py
src/ai_code_guardian/: __init__.py  analyzer.py  cli.py  config.py  maintainability.py  models.py  performance.py  report.py  scanner.py
src/code_guardian/: __init__.py  ai_detector.py  analyzer.py  config.py  models.py  report.py
tests/: __init__.py  test_analyzer.py  test_security_scanner.py
