[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeGuardian"
version = "0.1.0"
description = "AI-generated code quality analyzer and security scanner"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shivam", email = "shivamjindal0705@gmail.com"}
]
keywords = ["ai", "code-quality", "security", "static-analysis", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "ast-decompiler>=0.7.0",
    "bandit>=1.7.0",
    "pylint>=2.15.0",
    "radon>=5.1.0",
    "vulture>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "pathspec>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/yes-its-shivam/codeGuardian"
Repository = "https://github.com/yes-its-shivam/codeGuardian"
Issues = "https://github.com/yes-its-shivam/codeGuardian/issues"

[project.scripts]
ai-guardian = "code_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=code_guardian --cov-report=html --cov-report=term"